--- a/index.html
+++ b/index.html
@@ -12,135 +12,151 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="header">
-        <h1>Santiago Medina</h1>
-        <div class="links">
-          <a href="mailto:santiagm08@gmail.com" class="fa fa-envelope"></a>
-          <a href="https://www.github.com/santiagomed" class="fa fa-github"></a>
-          <a
-            href="https://www.linkedin.com/in/santiago-med"
-            class="fa fa-linkedin"
-          ></a>
-          <!--Download resume-->
-          <a href="" class="fa fa-file"></a>
+    <div class="scroll-container">
+      <div class="container">
+        <div class="header scroll-area">
+          <h1 class="anim-typewriter">Santiago Medina</h1>
+          <div class="links anim-icons">
+            <a href="mailto:santiagm08@gmail.com" class="fa fa-envelope"></a>
+            <a
+              href="https://www.github.com/santiagomed"
+              class="fa fa-github"
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/santiago-med"
+              class="fa fa-linkedin"
+            ></a>
+            <!--Download resume-->
+            <a href="resume.pdf" class="fa fa-file"></a>
+          </div>
         </div>
-      </div>
-      <div>
-        <h2>About Me</h2>
-        <p>
-          I am a student at the University of Michigan 〽️ (Go Blue!) where I
-          teach EECS 485 - Web Systems. I am passionate about making a positive
-          impact on the world 🌎 through technological advancements 💻, as well
-          as solving challenging problems and building innovative solutions. I
-          have experience working with a variety of programming languages and
-          frameworks, including Python, TypeScript, C/C++, C#, Go, React,
-          Node.js, and Flask.
-        </p>
-        <p>
-          I also help run
-          <a class="link" href="https://www.voidtechmichigan.org">VOID Tech</a>,
-          a student organization at the University of Michigan that focuses on
-          developing functional applications that try to solve problems at the
-          university; by Michigan students, for Michigan students.
-        </p>
-        <p>
-          Currently, I am investing most of my time in researching 🌱 about
-          Blockchain and dApp development, Artificial Intelligence, and their
-          respective applications.
-        </p>
-        <p>
-          In my free time, I enjoy playing music, watching movies, and reading
-          about the latest innovations in the tech world.
-        </p>
-      </div>
-      <h2>Experience</h2>
-      <div class="grid">
-        <div class="card">
-          <h3>Software Engineer Intern</h3>
+        <section id="about" class="anim-section scroll-area">
+          <h2>About Me</h2>
           <p>
-            <strong>Microsoft</strong> - Redmond, WA
-            <br />
-            <em>May 2022 - August 2022</em>
-          </p>
-          <ul>
-            <li>
-              Improved Partner Center Marketplace search functionality and
-              pagination by improving and fixing deprecated practices on the
-              back-end APIs built on ASP.NET.
-            </li>
-            <li>
-              Implemented a feature to the Partner Center Marketplace that
-              improved upon the filtering functionality, which ensured a better
-              user experience for Microsoft Partners.
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <h3>Instruction Assistant</h3>
-          <p>
-            <strong>University of Michigan</strong> - Ann Arbor, MI
-            <br />
-            <em>August 2022 - Present</em>
-          </p>
-          <ul>
-            <li>
-              Teach and assist students in EECS 485 - Web Systems, a course that
-              teaches students how to build web applications and systems using
-              modern web technologies.
-            </li>
-            <li>
-              Hold weekly lab sessions to reinforce learning objectives and help
-              students with their projects through office hours.
-            </li>
-          </ul>
-        </div>
-      </div>
-      <h2>Articles and Tutorials</h2>
-      <div class="grid">
-        <a href="https://www.voidtechmichigan.org/react-workshop" class="card">
-          <h3>TypeScript and React Workshop</h3>
-          <p>
-            <em>October 2022</em>
+            I am a student at the University of Michigan 〽️ (Go Blue!) where I
+            teach EECS 485 - Web Systems. I am passionate about making a
+            positive impact on the world 🌎 through technological advancements
+            💻, as well as solving challenging problems and building innovative
+            solutions. I have experience working with a variety of programming
+            languages and frameworks, including Python, TypeScript, C/C++, C#,
+            Go, React, Node.js, and Flask.
           </p>
           <p>
-            A workshop that teaches students how to build a web application
-            using TypeScript and React.
-          </p>
-        </a>
-        <a
-          href="https://www.voidtechmichigan.org/react-native-workshop"
-          class="card"
-        >
-          <h3>React Native Workshop</h3>
-          <p>
-            <em>October 2022</em>
+            I also help run
+            <a class="link" href="https://www.voidtechmichigan.org">VOID Tech</a
+            >, a student organization at the University of Michigan that focuses
+            on developing functional applications that try to solve problems at
+            the university; by Michigan students, for Michigan students.
           </p>
           <p>
-            A workshop that teaches students how to build a mobile application
-            using React Native.
-          </p>
-        </a>
-        <a
-          href="https://www.voidtechmichigan.org/backend-workshop"
-          class="card"
-        >
-          <h3>Node Backend Workshop</h3>
-          <p>
-            <em>October 2022</em>
+            Currently, I am investing most of my time in researching 🌱 about
+            Blockchain and dApp development, Artificial Intelligence, and their
+            respective applications.
           </p>
           <p>
-            A workshop that teaches students how to build a backend for a web
-            application using Node.js, Express, PostgreSQL, and Sequelize.
+            In my free time, I enjoy playing music, watching movies, and reading
+            about the latest innovations in the tech world.
           </p>
-        </a>
+        </section>
+        <section id="experience" class="scroll-area">
+          <h2>Experience</h2>
+          <div class="grid">
+            <div class="card">
+              <h3>Software Engineer Intern</h3>
+              <p>
+                <strong>Microsoft</strong> - Redmond, WA
+                <br />
+                <em>May 2022 - August 2022</em>
+              </p>
+              <ul>
+                <li>
+                  Improved Partner Center Marketplace search functionality and
+                  pagination by improving and fixing deprecated practices on the
+                  back-end APIs built on ASP.NET.
+                </li>
+                <li>
+                  Implemented a feature to the Partner Center Marketplace that
+                  improved upon the filtering functionality, which ensured a
+                  better user experience for Microsoft Partners.
+                </li>
+              </ul>
+            </div>
+            <div class="card">
+              <h3>Instruction Assistant</h3>
+              <p>
+                <strong>University of Michigan</strong> - Ann Arbor, MI
+                <br />
+                <em>August 2022 - Present</em>
+              </p>
+              <ul>
+                <li>
+                  Teach and assist students in EECS 485 - Web Systems, a course
+                  that teaches students how to build web applications and
+                  systems using modern web technologies.
+                </li>
+                <li>
+                  Hold weekly lab sessions to reinforce learning objectives and
+                  help students with their projects through office hours.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section id="articles" class="scroll-area">
+          <h2>Articles and Tutorials</h2>
+          <div class="grid">
+            <a
+              href="https://www.voidtechmichigan.org/react-workshop"
+              class="card"
+            >
+              <h3>TypeScript and React Workshop</h3>
+              <p>
+                <em>October 2022</em>
+              </p>
+              <p>Build a web application using TypeScript and React.</p>
+            </a>
+            <a
+              href="https://www.voidtechmichigan.org/react-native-workshop"
+              class="card"
+            >
+              <h3>React Native Workshop</h3>
+              <p>
+                <em>October 2022</em>
+              </p>
+              <p>Build a mobile application using React Native.</p>
+            </a>
+            <a
+              href="https://www.voidtechmichigan.org/backend-workshop"
+              class="card"
+            >
+              <h3>Node Backend Workshop</h3>
+              <p>
+                <em>October 2022</em>
+              </p>
+              <p>
+                Build a backend for a web application using Node.js, Express,
+                PostgreSQL, and Sequelize.
+              </p>
+            </a>
+            <a
+              href="https://docs.google.com/document/d/1s17VLsTFihVW9tpL6F-91JsclQ1ouDUoFAW9x-wXpOA/edit#heading=h.spsmqi85124j"
+              class="card"
+            >
+              <h3>Blockchain Reading List</h3>
+              <p>
+                <em>December 2022</em>
+              </p>
+              <p>A list of articles and resources to learn about Blockchain.</p>
+            </a>
+          </div>
+        </section>
       </div>
     </div>
-    <!-- Copyright footer -->
+    <!-- Copyright footer
     <footer>
       <p>
         <small> © 2022 Santiago Medina. All rights reserved. </small>
       </p>
-    </footer>
+    </footer> -->
   </body>
 </html>
